Plantilla adaptada a Flash Mobile

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Gana Dinero Ilimitadamente: EmprendeWorld</title>
+    <title>Oportunidad para Colombia</title>
 
     <meta name="description" content="Source code generated using layoutit.com">
     <meta name="author" content="LayoutIt!">
@@ -22,7 +22,7 @@
       <div class="row">
         <div class="col-md-12">
           <h3 class="text-center text-primary titulo1">
-            ¿QUIERES GANAR DESDE $2.00 HASTA $120 DÓLARES DIARIOS?
+            ¿QUIERES ALCANZAR TU LIBERTAD FINANCIERA?
           </h3>
           <h4 class="text-center text-secondary titulo2">
             MIRA EL SIGUIENTE VIDEO
@@ -35,7 +35,7 @@
         </div>
         <div class="col-md-6">
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/EtMZFh-yTGA?start=7" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/SJW6A5b1lmI?controls=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
         </div>
         <div class="col-md-3">
@@ -46,7 +46,7 @@
         <div class="col-md-4">
         </div>
         <div class="col-md-4 accion">
-          <a class="btn btn-danger btn-lg btn-block" href="http://www.emprendeworld.com/?ref=87588207" target="_blank">REGISTRATE AQUÍ</a>
+          <a class="btn btn-success btn-lg btn-block" href="https://api.whatsapp.com/send?phone=573007367900&text=Quiero alcanzar mi libertad financiera" target="_blank">CONTACTANOS AQUÍ</a>
         </div>
         <div class="col-md-4">
         </div>
@@ -56,21 +56,16 @@
         <div class="col-md-4">
         </div>
         <div class="col-md-4">
-          <h4 style="text-align: center;">En nuestro equipo tienes acceso a:</h4>          
+          <h4 style="text-align: center;">Resuelve tus dudas:</h4>          
         </div>
         <div class="col-md-4">
         </div>
       </div>
 
       <div class="row">
-        <div class="col-6 ayuda">
-          <a class="btn btn-outline-info btn-md" href="https://api.whatsapp.com/send?phone=573007367900&text=Necesito ayuda para ganar mis primeros 2 dolares" target="_blank">
-            AYUDA
-          </a>
-        </div>
-        <div class="col-6 bonos">
-          <a class="bt btn btn-outline-info btn-md" href="https://api.whatsapp.com/send?phone=573007367900&text=Quiero mis bonos para ganar mis primeros 2 dolares" target="_blank">
-            BONOS
+        <div class="col-12 ayuda">
+          <a class="btn btn-outline-info btn-md" href="https://api.whatsapp.com/send?phone=573007367900&text=Resuelve mis dudas" target="_blank">
+            DUDAS
           </a>
         </div>
       </div>
