--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="row">
         <div class="col-md-4">
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 dudas">
           <h4 style="text-align: center;">Resuelve tus dudas:</h4>          
         </div>
         <div class="col-md-4">
